--- a/style.css
+++ b/style.css
@@ -5,11 +5,24 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+  background: linear-gradient(
+    180deg,
+    rgb(227, 255, 248, 0) 82%,
+    rgb(227, 255, 248, 0.38) 100%
+  );
+  min-height: 100vh;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .page {
   width: 1000px;
-  margin: 65px auto 0;
+  margin: 0px auto;
+  padding-top: 65px;
 }
 
 nav {
@@ -30,15 +43,23 @@ ul {
   height: 433px;
 }
 
+a{
+  color: #1F1534;
+}
+
+ul li a{
+  opacity: 0.5;
+}
+
 ul li a {
   font-weight: 400;
   text-decoration: none;
-  color: grey;
   font-size: 18px;
 }
 
 ul li a:hover {
-  color: #1f1534;
+  color: #1F1534;
+  opacity: 1;
 }
 
 h1,
@@ -67,20 +88,34 @@ p {
   font-size: 14px;
   font-weight: 400;
   line-height: 28px;
-  margin: 40px auto;
+  margin: 40px 0;
 }
 
-button{
-  font-family: "Mulish", sans-serif;
-  font-size: 16px;
+button {
   color: #f9f9f9;
-  background: #69B99D;
-  width: 179px;
-  height: 56px;
+  font-family: "Mulish", sans-serif;
+  font-size: 18px;
+  background: #69b99d;
   border: none;
+  border-radius: 4px;
+  padding: 14px 32px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  cursor: pointer;
 }
 
-footer p{
+button:hover {
+  background: #3f9979;
+}
+
+footer {
+  text-align: center;
+  margin-top: 82px;
+}
+
+footer p {
   font-size: 14px;
   line-height: 28px;
   font-weight: 400;
@@ -88,9 +123,19 @@ footer p{
   display: inline;
 }
 
-footer a{
+footer a {
   font-size: 14px;
   font-weight: bold;
   color: #000;
   text-decoration: none;
+}
+
+footer a:hover {
+  color: #89c5cc;
+}
+
+#balls {
+  position: fixed;
+  right: 0px;
+  bottom: 0px;
 }
